--- a/Final_Project/nbproject/project.properties
+++ b/Final_Project/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Final_Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\HP\\Videos\\AED\\Lab8Package\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
