--- a/Final_Project/nbproject/project.properties
+++ b/Final_Project/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Final_Project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\HP\\Videos\\AED\\Lab8Package\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar-1=C:\\Users\\Apurva Sawant\\Desktop\\AED\\Lab8Package\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.db4o-8.0.184.15484-all-java5.jar}
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
