--- a/Final_Project/nbproject/project.properties
+++ b/Final_Project/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.db4o-8.0.184.15484-all-java5.jar-1=C:\\Users\\Apurva Sawant\\Desk
 file.reference.db4o-8.0.184.15484-all-java5.jar-2=C:\\Users\\Aadesh Randeria\\Downloads\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar-3=E:\\Downloads Backup\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Apurva Sawant\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}:\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-2}:\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
