--- a/Final_Project/nbproject/project.properties
+++ b/Final_Project/nbproject/project.properties
@@ -31,8 +31,19 @@ file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\HP\\Videos\\AED\\Lab8
 file.reference.db4o-8.0.184.15484-all-java5.jar-1=C:\\Users\\Apurva Sawant\\Desktop\\AED\\Lab8Package\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar-2=C:\\Users\\Aadesh Randeria\\Downloads\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar-3=E:\\Downloads Backup\\Lab8Package\\db4o-8.0.184.15484-all-java5.jar\\db4o-8.0.184.15484-all-java5.jar
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\hamcrest-core-1.3.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Apurva Sawant\\Downloads\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\junit-4.11.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=C:\\Users\\Aadesh Randeria\\Downloads\\jfreechart-1.0.19\\lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,7 +53,18 @@ javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-2}:\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-3}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
